@@ -140,6 +140,7 @@ def set_allowed_requests(sec_level):
 				 "fs_abilities.get_fsabilities_restoresource",
 				 "restore.MirrorStruct.set_mirror_and_rest_times",
 				 "restore.MirrorStruct.initialize_rf_cache",
+				 "restore.MirrorStruct.close_rf_cache",
 				 "restore.MirrorStruct.get_diffs",
 				 "backup.SourceStruct.get_source_select",
 				 "backup.SourceStruct.set_source_select",
